<resources>
    <string name="app_name">Profile</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="profileakun">Profile</string>
    <string name="posting">Post</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="people">People</string>
    <string name="todo">TODO</string>
</resources>
