<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/background1" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/bgcolor"
            android:contentDescription="@string/todo" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pratedyo Septiardo"
                android:textStyle="bold"
                android:textSize="25sp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="150dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Balikpapan, KALTIM "
                android:textStyle="bold"
                android:textSize="25sp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="180dp"
                />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="185dp"
                android:background="@drawable/lokasikc"
                android:contentDescription="@string/todo" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="80dp"
                android:src="@drawable/foto1"
                />
        </FrameLayout>

    </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
            android:id="@+id/tv_heart"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/following"
            android:textSize="30sp"
            android:drawableStart="@drawable/ic_people_black_24dp"
            android:drawablePadding="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="10dp"/>

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="9000"
                android:textColor="@color/colorTitleWhite"
                android:textSize="40sp"
                android:layout_marginTop="43dp"
                android:layout_marginLeft="210dp"
                android:layout_marginRight="10dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="110dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:background="@android:color/black"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_keyboard_arrow_right_black_24dp"
                android:layout_marginTop="50dp"
                android:layout_marginStart="300dp"/>

            <TextView
                android:id="@+id/tv_comment"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/followers"
                android:textSize="30sp"
                android:drawableStart="@drawable/ic_people_black_24dp"
                android:drawablePadding="20dp"
                android:layout_marginTop="125dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="10dp"/>

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="400"
                android:textColor="@color/colorTitleWhite"
                android:textSize="40sp"
                android:layout_marginTop="120dp"
                android:layout_marginLeft="225dp"
                android:layout_marginRight="10dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="185dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:background="@android:color/black"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_keyboard_arrow_right_black_24dp"
                android:layout_marginTop="125dp"
                android:layout_marginStart="300dp"/>


            <TextView
                android:id="@+id/tv_chat"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/profileakun"
                android:textSize="30sp"
                android:drawableStart="@drawable/ic_person_outline_black_24dp"
                android:drawablePadding="20dp"
                android:layout_marginTop="200dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"/>


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="260dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:background="@android:color/black"
                android:contentDescription="@string/todo" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_keyboard_arrow_right_black_24dp"
                android:layout_marginTop="200dp"
                android:layout_marginStart="300dp"/>

            <TextView
                android:id="@+id/tv_set"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="280dp"
                android:layout_marginRight="25dp"
                android:drawableStart="@drawable/ic_chat_bubble_outline_black_24dp"
                android:drawablePadding="20dp"
                android:text="@string/posting"
                android:textSize="30sp" />

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="46"
                android:textColor="@color/colorTitleWhite"
                android:textSize="40sp"
                android:layout_marginTop="272dp"
                android:layout_marginLeft="250dp"
                android:layout_marginRight="10dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_keyboard_arrow_right_black_24dp"
                android:layout_marginTop="285dp"
                android:layout_marginStart="300dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_keyboard_arrow_right_black_24dp"
                android:layout_marginTop="200dp"
                android:layout_marginStart="300dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Profile"
                android:drawableTop="@drawable/ic_account_circle_black_24dp"
                android:layout_marginTop="360dp"
                android:layout_marginStart="50dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Home"
                android:drawableTop="@drawable/ic_home_black_24dp"
                android:layout_marginTop="360dp"
                android:layout_marginStart="180dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="People"
                android:drawableTop="@drawable/ic_account_circle_black_24dp"
                android:layout_marginTop="360dp"
                android:layout_marginLeft="300dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="350dp"
                android:background="@drawable/bgcolor"
                android:contentDescription="@string/todo" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>
